# emailservice

./: .env  .env.example  .gitignore  Cargo.toml  README.md  configuration.yml.example
.github/workflows/: general.yml
migrations/: 20210920051629_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/models/: form_model.rs  mod.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
